fix: css spacing

--- a/src/components/EditHistory/EditHistory.css
+++ b/src/components/EditHistory/EditHistory.css
@@ -15,7 +15,7 @@ html {
     width: 64px;
     height: 64px;
     border-radius: 50%;
-    margin-top: 0.9rem;
+    margin-top: 0.5rem;
     border: 1px solid #f0f0f0;
     text-align: center;
     align-items: center;
@@ -40,17 +40,12 @@ html {
     margin-bottom: 0 !important;
 }
 
+.edit-history-list h4 {
+    margin-top: 5px !important;
+}
+
 @media screen and (max-width: 420px) {
-    .edit-history-list-img {
-        margin-top: 1.45rem;
-    }
-
     .edit-history-list-actions {
-        /* display: block; */
         margin-left: 5rem;
-    }
-
-    .edit-history-list-action-divider {
-        display: none;
     }
 }
